[package]
authors = ["Stef Gijsberts"]
edition = "2018"
license = "MIT/Apache-2.0"
name = "tcplines2ws"
readme = "README.md"
version = "0.1.0"

[dependencies]
futures-util = {version = "0.3.17", features = ["io"]}
log = "0.4.14"
simple-logging = "2.0.2"
tokio = {version = "1.11.0", features = ["rt-multi-thread"]}
tokio-tungstenite = "0.15.0"
tokio-util = {version = "0.6.8", features = ["codec"]}
